Fixed text overflow in IE

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -7,6 +7,7 @@
 /* Custom styles */
 
 body {
+    -ms-word-wrap: break-word;
     overflow-wrap: break-word;
 }
 
